crates/cli/tests/snapshots/bool_simplification__fix_b01828755e286c145f9a8ae65cde7a14eb9e252d7bb6f72fb3d934dff9400353.snap
---
source: crates/cli/tests/bool_simplification.rs
expression: "\"!(a == b)\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-!(a == b)
+a != b
