crates/cli/tests/snapshots/bool_simplification__fix_fc74617cbe767e6731b7fbce9bf425fe8a017be2bebd70050bbe01f40a45f066.snap
---
source: crates/cli/tests/bool_simplification.rs
expression: "\"!(a != b)\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-!(a != b)
+a == b
