crates/cli/tests/snapshots/bool_simplification__lint_b01828755e286c145f9a8ae65cde7a14eb9e252d7bb6f72fb3d934dff9400353.snap
---
source: crates/cli/tests/bool_simplification.rs
expression: "\"!(a == b)\""
---
[18] Warning: This boolean expression can be simplified
   ╭─[<temp_file_path>:1:1]
   │
 1 │ !(a == b)
   · ────┬────  
   ·     ╰────── Try != instead of !(... == ...)
───╯
