crates/cli/tests/snapshots/bool_simplification__lint_fc74617cbe767e6731b7fbce9bf425fe8a017be2bebd70050bbe01f40a45f066.snap
---
source: crates/cli/tests/bool_simplification.rs
expression: "\"!(a != b)\""
---
[W18] Warning: This boolean expression can be simplified
   ╭─[<temp_file_path>:1:1]
   │
 1 │ !(a != b)
   · ────┬────  
   ·     ╰────── Try == instead of !(... != ...)
───╯
